--- a/group_vars/all/base.yml
+++ b/group_vars/all/base.yml
@@ -20,7 +20,6 @@ base_productivity_tools:
 
 base_system_tools:
   - fatrace
-  - gnome-calculator
   - gnome-shell-extension-bluetooth-quick-connect  # enable in gnome-tweak-tools > Extensions
   - gnome-shell-timer  # enable in gnome-tweak-tools > Extensions
   - gnome-tweak-tool
@@ -42,19 +41,12 @@ base_download_tools:
   - transmission
   - speedtest-cli
   - wget
-  - youtube-dl
 
 base_developer_tools:
-  - android-tools-adb
-  - android-tools-fastboot
-  - ansible
-  - ansible-lint
-  - awscli
   - bat
   - bpython
   - black
   - cloc
-  - clusterssh
   - colordiff
   - csvkit
   - curl
@@ -77,7 +69,6 @@ base_developer_tools:
   - inotify-tools
   - ipython3
   - jq
-  - kwalify
   - makeself
   - meld
   - miller
@@ -105,16 +96,12 @@ base_developer_tools:
   - python3-pip
   - ranger
   - recode
-  - remmina
   - rename
   - ripgrep  # launch using rg from the cli
   - ruby
   - ruby-dev
   - shellcheck
   - siege
-  - socat
-  - sshfs
-  - sshpass
   - tilix
   - tldr
   - tmux
@@ -126,8 +113,6 @@ base_developer_tools:
   - zeal
 
 base_virtualization_tools:
-  - virtualbox
-#  - virtualbox-ext-pack
   - docker.io
   - docker-compose
 
@@ -145,4 +130,6 @@ base_media_tools:
 base_openssh_server:
   apt_package: openssh-server
   service: ssh
+
+slack_version: 4.19.2
 ...
