--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -1,61 +1,15 @@
 ---
 
-# mount /tmp on tmpfs
-- block:
-    - name: clear the existing /tmp dir (1/5)
-      shell: "/bin/rm -rf *"
-      args:
-        chdir: /tmp
-        warn: no
-
-    - name: copy systemd file (2/5)
-      copy:
-        src: /usr/share/systemd/tmp.mount
-        dest: /lib/systemd/system/tmp.mount
-        remote_src: True
-
-    - name: create dir /etc/systemd/system/tmp.mount.d (3/5)
-      file:
-        path: /etc/systemd/system/tmp.mount.d
-        state: directory
-
-    - name: create tmp.mount custom options file (4/5)
-      copy:
-        dest: /etc/systemd/system/tmp.mount.d/options.conf
-        content: |
-          [Mount]
-          Options=mode=1777,strictatime,nosuid,nodev,size=512M
-
-    - name: start and enable tmp.mount on boot (5/5)
-      systemd:
-        name: tmp.mount
-        enabled: yes
-        state: started
-        daemon_reload: yes
-
 - name: Set default text editor to vim
   alternatives:
     name: editor
     path: /usr/bin/vim.basic
-
-- name: enable ufw firewall but allow ssh
-  ufw:
-    rule: limit
-    port: ssh
-    proto: tcp
-    state: enabled
 
 - name: disable system crash reports
   lineinfile:
     dest: /etc/default/apport
     regexp: "^enabled=(0|1)"
     line: enabled=0
-    state: present
-
-- name: tune system swappiness
-  sysctl:
-    name: vm.swappiness
-    value: '1'
     state: present
 
 - name: perform a dist upgrade
@@ -69,6 +23,16 @@
     name: "{{ base_archiving_tools }}"
     state: present
     force_apt_get: yes
+
+- name: Download Ubuntu slack package
+  command: "wget -O /tmp/slack-desktop-{{ slack_version }}-amd64.deb https://downloads.slack-edge.com/linux_releases/slack-desktop-{{ slack_version }}-amd64.deb"
+  args:
+    creates: "/tmp/slack-desktop-{{ slack_version }}-amd64.deb"
+  when: check_slack.rc == 1
+
+- name: Install Ubuntu slack package
+  command: gdebi --non-interactive /tmp/slack-desktop-{{slack_version}}-amd64.deb
+  when: check_slack.rc == 1
 
 - name: install productivity tools
   apt:
@@ -155,10 +119,6 @@
     append: yes
     groups:
       - docker
-      - vboxusers
-
-#- name: install virtualbox extensions pack
-#  shell: echo 'y' | vboxmanage extpack install --replace /usr/share/virtualbox-ext-pack/Oracle*
 
 - block:
     - name: install openssh-server package (1/2)
