--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -24,6 +24,15 @@
     state: present
     force_apt_get: yes
 
+- name: install gdebi
+  apt: name=gdebi
+
+- name: Check if slack is installed
+  command: dpkg-query -W slack-desktop
+  register: check_slack
+  failed_when: false
+  changed_when: false
+
 - name: Download Ubuntu slack package
   command: "wget -O /tmp/slack-desktop-{{ slack_version }}-amd64.deb https://downloads.slack-edge.com/linux_releases/slack-desktop-{{ slack_version }}-amd64.deb"
   args:
